--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -9,27 +9,36 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-class>com.omniscience.OmniscienceServlet</servlet-class>
 	</servlet>
 	<servlet>
-		<servlet-name>Editor</servlet-name>
-		<servlet-class>com.omniscience.EditorServlet</servlet-class>
+		<servlet-name>Add</servlet-name>
+		<servlet-class>com.omniscience.AddCalendarServlet</servlet-class>
 	</servlet>
 	<servlet>
-		<servlet-name>Deletor</servlet-name>
-		<servlet-class>com.omniscience.DeleteServlet</servlet-class>
+		<servlet-name>Delete</servlet-name>
+		<servlet-class>com.omniscience.DeleteCalendarServlet</servlet-class>
 	</servlet>
-	
+	<servlet>
+		<servlet-name>Delete</servlet-name>
+		<servlet-class>com.omniscience.EditCalendarServlet</servlet-class>
+	</servlet>	
+		
 	
 	<servlet-mapping>
 		<servlet-name>Omniscience</servlet-name>
 		<url-pattern>/omniscience</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
-		<servlet-name>Editor</servlet-name>
-		<url-pattern>/editor</url-pattern>
+		<servlet-name>Add</servlet-name>
+		<url-pattern>/add</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
-		<servlet-name>Editor</servlet-name>
+		<servlet-name>Delete</servlet-name>
 		<url-pattern>/delete</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Delete</servlet-name>
+		<url-pattern>/edit</url-pattern>
+	</servlet-mapping>
+	
 	
 	
 	<welcome-file-list>
